# motion2telegram

./: .gitignore  LICENSE  MANIFEST.in  README.md  configure.py  motion.conf  pyproject.toml  requirements.txt  send.py  template.motion.conf
.github/workflows/: ci.yml
src/motion2telegram/: __init__.py  cli.py  configure.py  send.py  template.mobile_phone_scan.service  template.motion.conf  template.motion.env  template.motion.service
