[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motion2telegram"
version = "1.1.0"
authors = [
  { name="p4irin", email="p4irin.github.io@gmail.com" },
]
description = "Notify a Telegram user when the motion service detects motion"
readme = "README.md"
requires-python = ">=3.8.10"
keywords = [
  "motion", "python", "telegram", "motion-detection", "webcam", "raspberry-pi"
]
dependencies = [
  "telegram-notifier-bot >= 1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
lint = [
  "mypy >= 1.9.0",
  "ruff >= 0.3.4",
]
#test = [
#  "pytest >= 8.1.1",
#  "pytest-cov >= 4.1.0",
#]
package = [
  "build == 0.10.0",
  "twine >= 4.0.2",
]
dev = [
  "bumpver >= 2023.1126",
  "motion2telegram[lint]",
  # "motion2telegram[test]",
  "motion2telegram[package]",
]

[project.scripts]
motion2telegram = "motion2telegram.cli:cli"

[project.urls]
"Homepage" = "https://github.com/p4irin/motion2telegram"
"Bug Tracker" = "https://github.com/p4irin/motion2telegram/issues"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'current_version = "{version}"',
  'version = "{version}"',
]
"src/motion2telegram/__init__.py" = [
  "^__version__ = '{version}'$",
]
#"tests/tests.py" = [
#  "^__version__ = '{version}'$",
#]


[tool.mypy]

[[tool.mypy.overrides]]
module = "telegram_notifier_bot"
ignore_missing_imports = true

